--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,18 @@
 name: roc_date_time
 version: 1.0.0
 description: A Dart package providing custom DateTime classes for displaying dates in the Republic of China (ROC) calendar.
-# repository: https://github.com/my_org/my_repo
-
+homepage: https://github.com/ShiKai-Pan/roc_date_time
+repository: https://github.com/ShiKai-Pan/roc_date_time
+issue_tracker: https://github.com/ShiKai-Pan/roc_date_time/issues
 environment:
   sdk: ^3.1.5
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  web:
+  windows:
 
 # Add regular dependencies here.
 dependencies:
